# slax

./: .gitignore  LICENSE  NOTICE.txt  README.md  benchmark.py  example.ipynb  pyproject.toml
NIR/: test_nir.ipynb
NIR/primitives/: conv.py  linear.py
Slax.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
neurobench/: benchmark.py  neurobench_compat_dev.ipynb  static_metrics.py  workload_metrics.py
perf_tests/: benchmark.ipynb  benchmark.py  benchmark_jax.py  benchmark_torch.py  data.csv  utils.py
src/slax/: __init__.py  custom_learning.py  gen_ll.py  neurons.py  randman_dataset.py  surrogates.py  utils.py
src/slax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/slax/eval/: __init__.py  gen_ll.py  jax_randman.py  randman_dataset.py  test_eval_utils.py  test_randman_dataset.py  utils.py
src/slax/model/: __init__.py  neuron.py  test_neuron.py  test_surrogate.py  utils.py
src/slax/models/: __init__.py  neurons.py  surrogates.py  test_models_utils.py  utils.py
src/slax/neurobench/: __init__.py  benchmarks.py  hooks.py  model.py  slax_model.py  static_metrics.py  utils.py  workload_metrics.py
src/slax/nir/: __init__.py  utils.py
src/slax/train/: __init__.py  custom_learning.py  helpers.py  test_custom_learning.py  test_train_utils.py  utils.py
tests/: __init__.py  conftest.py  test_slax.py
(+26 files in other folders)
