[project]
name = "slax"
version = "0.0.2"
authors = [
  { name="Thomas Summe", email="tsumme@nd.edu" },
]
description = "A forward looking JAX/Flax library for performant prototyping of learning rules for spiking neural networks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
"flax >= 0.8.0",
"optax",
"scikit-learn",
"matplotlib",
"jax",
"nir",
]

[project.urls]
Homepage = "https://github.com/Intelligent-Microsystems-Lab/slax"
Issues = "https://github.com/Intelligent-Microsystems-Lab/slax/issues"